tp3-4/tp3/cool.output
Terminais sem uso na gramática

    ERROR


Gramática

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | class_list class ';'
    4           | class_list error ';'

    5 class: CLASS TYPEID '{' feature_list '}'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}'

    7 feature_list: feature_list feature ';'
    8             | %empty
    9             | feature_list error ';'

   10 feature: OBJECTID '(' formal_params ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expression

   13 formal_params: formal
   14              | formal_params ',' formal
   15              | %empty

   16 formal: OBJECTID ':' TYPEID

   17 expression: OBJECTID ASSIGN expression
   18           | expression '.' OBJECTID '(' expression_params ')'
   19           | expression '@' TYPEID '.' OBJECTID '(' expression_params ')'
   20           | OBJECTID '(' expression_params ')'
   21           | IF expression THEN expression ELSE expression FI
   22           | WHILE expression LOOP expression POOL
   23           | '{' expression_list '}'
   24           | LET let_expression
   25           | CASE expression OF case_list ESAC
   26           | NEW TYPEID
   27           | ISVOID expression
   28           | expression '+' expression
   29           | expression '-' expression
   30           | expression '*' expression
   31           | expression '/' expression
   32           | '~' expression
   33           | expression '<' expression
   34           | expression LE expression
   35           | expression '=' expression
   36           | NOT expression
   37           | '(' expression ')'
   38           | OBJECTID
   39           | INT_CONST
   40           | STR_CONST
   41           | BOOL_CONST

   42 case: OBJECTID ':' TYPEID DARROW expression

   43 case_list: case ';'
   44          | case_list case ';'

   45 expression_params: expression
   46                  | expression_params ',' expression
   47                  | %empty

   48 expression_list: expression ';'
   49                | expression_list expression ';'
   50                | expression_list error ';'

   51 let_expression: OBJECTID ':' TYPEID IN expression
   52               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   53               | OBJECTID ':' TYPEID ',' let_expression
   54               | OBJECTID ':' TYPEID ASSIGN expression ',' let_expression
   55               | error ',' let_expression


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 10 18 19 20 37
    ')' (41) 10 18 19 20 37
    '*' (42) 30
    '+' (43) 28
    ',' (44) 14 46 53 54 55
    '-' (45) 29
    '.' (46) 18 19
    '/' (47) 31
    ':' (58) 10 11 12 16 42 51 52 53 54
    ';' (59) 2 3 4 7 9 43 44 48 49 50
    '<' (60) 33
    '=' (61) 35
    '@' (64) 19
    '{' (123) 5 6 10 23
    '}' (125) 5 6 10 23
    '~' (126) 32
    error (256) 4 9 50 55
    CLASS (258) 5 6
    ELSE (259) 21
    FI (260) 21
    IF (261) 21
    IN (262) 51 52
    INHERITS (263) 6
    LET (264) 24
    LOOP (265) 22
    POOL (266) 22
    THEN (267) 21
    WHILE (268) 22
    CASE (269) 25
    ESAC (270) 25
    OF (271) 25
    DARROW (272) 42
    NEW (273) 26
    ISVOID (274) 27
    STR_CONST <symbol> (275) 40
    INT_CONST <symbol> (276) 39
    BOOL_CONST <boolean> (277) 41
    TYPEID <symbol> (278) 5 6 10 11 12 16 19 26 42 51 52 53 54
    OBJECTID <symbol> (279) 10 11 12 16 17 18 19 20 38 42 51 52 53 54
    ASSIGN (280) 12 17 52 54
    NOT (281) 36
    LE (282) 34
    ERROR (283)
    LET_ (285)


Não terminais com as regras onde eles aparecem

    $accept (46)
        à esquerda: 0
    program <program> (47)
        à esquerda: 1
        à direita: 0
    class_list <classes> (48)
        à esquerda: 2 3 4
        à direita: 1 3 4
    class <class_> (49)
        à esquerda: 5 6
        à direita: 2 3
    feature_list <features> (50)
        à esquerda: 7 8 9
        à direita: 5 6 7 9
    feature <feature> (51)
        à esquerda: 10 11 12
        à direita: 7
    formal_params <formals> (52)
        à esquerda: 13 14 15
        à direita: 10 14
    formal <formal> (53)
        à esquerda: 16
        à direita: 13 14
    expression <expression> (54)
        à esquerda: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        à direita: 10 12 17 18 19 21 22 25 27 28 29 30 31 32 33 34 35 36 37 42 45 46 48 49 51 52 54
    case <case_> (55)
        à esquerda: 42
        à direita: 43 44
    case_list <cases> (56)
        à esquerda: 43 44
        à direita: 25 44
    expression_params <expressions> (57)
        à esquerda: 45 46 47
        à direita: 18 19 20 46
    expression_list <expressions> (58)
        à esquerda: 48 49 50
        à direita: 23 49 50
    let_expression <expression> (59)
        à esquerda: 51 52 53 54 55
        à direita: 24 53 54 55


Estado 0

    0 $accept: . program $end

    CLASS  deslocar, e ir ao estado 1

    program     ir ao estado 2
    class_list  ir ao estado 3
    class       ir ao estado 4


Estado 1

    5 class: CLASS . TYPEID '{' feature_list '}'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}'

    TYPEID  deslocar, e ir ao estado 5


Estado 2

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 6


Estado 3

    1 program: class_list .
    3 class_list: class_list . class ';'
    4           | class_list . error ';'

    error  deslocar, e ir ao estado 7
    CLASS  deslocar, e ir ao estado 1

    $end  reduzir usando a regra 1 (program)

    class  ir ao estado 8


Estado 4

    2 class_list: class . ';'

    ';'  deslocar, e ir ao estado 9


Estado 5

    5 class: CLASS TYPEID . '{' feature_list '}'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}'

    INHERITS  deslocar, e ir ao estado 10
    '{'       deslocar, e ir ao estado 11


Estado 6

    0 $accept: program $end .

    $padrão  aceitar


Estado 7

    4 class_list: class_list error . ';'

    ';'  deslocar, e ir ao estado 12


Estado 8

    3 class_list: class_list class . ';'

    ';'  deslocar, e ir ao estado 13


Estado 9

    2 class_list: class ';' .

    $padrão  reduzir usando a regra 2 (class_list)


Estado 10

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}'

    TYPEID  deslocar, e ir ao estado 14


Estado 11

    5 class: CLASS TYPEID '{' . feature_list '}'

    $padrão  reduzir usando a regra 8 (feature_list)

    feature_list  ir ao estado 15


Estado 12

    4 class_list: class_list error ';' .

    $padrão  reduzir usando a regra 4 (class_list)


Estado 13

    3 class_list: class_list class ';' .

    $padrão  reduzir usando a regra 3 (class_list)


Estado 14

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}'

    '{'  deslocar, e ir ao estado 16


Estado 15

    5 class: CLASS TYPEID '{' feature_list . '}'
    7 feature_list: feature_list . feature ';'
    9             | feature_list . error ';'

    error     deslocar, e ir ao estado 17
    OBJECTID  deslocar, e ir ao estado 18
    '}'       deslocar, e ir ao estado 19

    feature  ir ao estado 20


Estado 16

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}'

    $padrão  reduzir usando a regra 8 (feature_list)

    feature_list  ir ao estado 21


Estado 17

    9 feature_list: feature_list error . ';'

    ';'  deslocar, e ir ao estado 22


Estado 18

   10 feature: OBJECTID . '(' formal_params ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expression

    '('  deslocar, e ir ao estado 23
    ':'  deslocar, e ir ao estado 24


Estado 19

    5 class: CLASS TYPEID '{' feature_list '}' .

    $padrão  reduzir usando a regra 5 (class)


Estado 20

    7 feature_list: feature_list feature . ';'

    ';'  deslocar, e ir ao estado 25


Estado 21

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}'
    7 feature_list: feature_list . feature ';'
    9             | feature_list . error ';'

    error     deslocar, e ir ao estado 17
    OBJECTID  deslocar, e ir ao estado 18
    '}'       deslocar, e ir ao estado 26

    feature  ir ao estado 20


Estado 22

    9 feature_list: feature_list error ';' .

    $padrão  reduzir usando a regra 9 (feature_list)


Estado 23

   10 feature: OBJECTID '(' . formal_params ')' ':' TYPEID '{' expression '}'

    OBJECTID  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 15 (formal_params)

    formal_params  ir ao estado 28
    formal         ir ao estado 29


Estado 24

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  deslocar, e ir ao estado 30


Estado 25

    7 feature_list: feature_list feature ';' .

    $padrão  reduzir usando a regra 7 (feature_list)


Estado 26

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' .

    $padrão  reduzir usando a regra 6 (class)


Estado 27

   16 formal: OBJECTID . ':' TYPEID

    ':'  deslocar, e ir ao estado 31


Estado 28

   10 feature: OBJECTID '(' formal_params . ')' ':' TYPEID '{' expression '}'
   14 formal_params: formal_params . ',' formal

    ')'  deslocar, e ir ao estado 32
    ','  deslocar, e ir ao estado 33


Estado 29

   13 formal_params: formal .

    $padrão  reduzir usando a regra 13 (formal_params)


Estado 30

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  deslocar, e ir ao estado 34

    $padrão  reduzir usando a regra 11 (feature)


Estado 31

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  deslocar, e ir ao estado 35


Estado 32

   10 feature: OBJECTID '(' formal_params ')' . ':' TYPEID '{' expression '}'

    ':'  deslocar, e ir ao estado 36


Estado 33

   14 formal_params: formal_params ',' . formal

    OBJECTID  deslocar, e ir ao estado 27

    formal  ir ao estado 37


Estado 34

   12 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 52


Estado 35

   16 formal: OBJECTID ':' TYPEID .

    $padrão  reduzir usando a regra 16 (formal)


Estado 36

   10 feature: OBJECTID '(' formal_params ')' ':' . TYPEID '{' expression '}'

    TYPEID  deslocar, e ir ao estado 53


Estado 37

   14 formal_params: formal_params ',' formal .

    $padrão  reduzir usando a regra 14 (formal_params)


Estado 38

   21 expression: IF . expression THEN expression ELSE expression FI

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 54


Estado 39

   24 expression: LET . let_expression

    error     deslocar, e ir ao estado 55
    OBJECTID  deslocar, e ir ao estado 56

    let_expression  ir ao estado 57


Estado 40

   22 expression: WHILE . expression LOOP expression POOL

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 58


Estado 41

   25 expression: CASE . expression OF case_list ESAC

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 59


Estado 42

   26 expression: NEW . TYPEID

    TYPEID  deslocar, e ir ao estado 60


Estado 43

   27 expression: ISVOID . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 61


Estado 44

   40 expression: STR_CONST .

    $padrão  reduzir usando a regra 40 (expression)


Estado 45

   39 expression: INT_CONST .

    $padrão  reduzir usando a regra 39 (expression)


Estado 46

   41 expression: BOOL_CONST .

    $padrão  reduzir usando a regra 41 (expression)


Estado 47

   17 expression: OBJECTID . ASSIGN expression
   20           | OBJECTID . '(' expression_params ')'
   38           | OBJECTID .

    ASSIGN  deslocar, e ir ao estado 62
    '('     deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 38 (expression)


Estado 48

   36 expression: NOT . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 64


Estado 49

   32 expression: '~' . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 65


Estado 50

   23 expression: '{' . expression_list '}'

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression       ir ao estado 66
    expression_list  ir ao estado 67


Estado 51

   37 expression: '(' . expression ')'

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 68


Estado 52

   12 feature: OBJECTID ':' TYPEID ASSIGN expression .
   18 expression: expression . '.' OBJECTID '(' expression_params ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' expression_params ')'
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    LE   deslocar, e ir ao estado 69
    '<'  deslocar, e ir ao estado 70
    '='  deslocar, e ir ao estado 71
    '+'  deslocar, e ir ao estado 72
    '-'  deslocar, e ir ao estado 73
    '*'  deslocar, e ir ao estado 74
    '/'  deslocar, e ir ao estado 75
    '@'  deslocar, e ir ao estado 76
    '.'  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 12 (feature)


Estado 53

   10 feature: OBJECTID '(' formal_params ')' ':' TYPEID . '{' expression '}'

    '{'  deslocar, e ir ao estado 78


Estado 54

   18 expression: expression . '.' OBJECTID '(' expression_params ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' expression_params ')'
   21           | IF expression . THEN expression ELSE expression FI
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    THEN  deslocar, e ir ao estado 79
    LE    deslocar, e ir ao estado 69
    '<'   deslocar, e ir ao estado 70
    '='   deslocar, e ir ao estado 71
    '+'   deslocar, e ir ao estado 72
    '-'   deslocar, e ir ao estado 73
    '*'   deslocar, e ir ao estado 74
    '/'   deslocar, e ir ao estado 75
    '@'   deslocar, e ir ao estado 76
    '.'   deslocar, e ir ao estado 77


Estado 55

   55 let_expression: error . ',' let_expression

    ','  deslocar, e ir ao estado 80


Estado 56

   51 let_expression: OBJECTID . ':' TYPEID IN expression
   52               | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   53               | OBJECTID . ':' TYPEID ',' let_expression
   54               | OBJECTID . ':' TYPEID ASSIGN expression ',' let_expression

    ':'  deslocar, e ir ao estado 81


Estado 57

   24 expression: LET let_expression .

    $padrão  reduzir usando a regra 24 (expression)


Estado 58

   18 expression: expression . '.' OBJECTID '(' expression_params ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' expression_params ')'
   22           | WHILE expression . LOOP expression POOL
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    LOOP  deslocar, e ir ao estado 82
    LE    deslocar, e ir ao estado 69
    '<'   deslocar, e ir ao estado 70
    '='   deslocar, e ir ao estado 71
    '+'   deslocar, e ir ao estado 72
    '-'   deslocar, e ir ao estado 73
    '*'   deslocar, e ir ao estado 74
    '/'   deslocar, e ir ao estado 75
    '@'   deslocar, e ir ao estado 76
    '.'   deslocar, e ir ao estado 77


Estado 59

   18 expression: expression . '.' OBJECTID '(' expression_params ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' expression_params ')'
   25           | CASE expression . OF case_list ESAC
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    OF   deslocar, e ir ao estado 83
    LE   deslocar, e ir ao estado 69
    '<'  deslocar, e ir ao estado 70
    '='  deslocar, e ir ao estado 71
    '+'  deslocar, e ir ao estado 72
    '-'  deslocar, e ir ao estado 73
    '*'  deslocar, e ir ao estado 74
    '/'  deslocar, e ir ao estado 75
    '@'  deslocar, e ir ao estado 76
    '.'  deslocar, e ir ao estado 77


Estado 60

   26 expression: NEW TYPEID .

    $padrão  reduzir usando a regra 26 (expression)


Estado 61

   18 expression: expression . '.' OBJECTID '(' expression_params ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' expression_params ')'
   27           | ISVOID expression .
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    '@'  deslocar, e ir ao estado 76
    '.'  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 27 (expression)


Estado 62

   17 expression: OBJECTID ASSIGN . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 84


Estado 63

   20 expression: OBJECTID '(' . expression_params ')'

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    $padrão  reduzir usando a regra 47 (expression_params)

    expression         ir ao estado 85
    expression_params  ir ao estado 86


Estado 64

   18 expression: expression . '.' OBJECTID '(' expression_params ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' expression_params ')'
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression
   36           | NOT expression .

    LE   deslocar, e ir ao estado 69
    '<'  deslocar, e ir ao estado 70
    '='  deslocar, e ir ao estado 71
    '+'  deslocar, e ir ao estado 72
    '-'  deslocar, e ir ao estado 73
    '*'  deslocar, e ir ao estado 74
    '/'  deslocar, e ir ao estado 75
    '@'  deslocar, e ir ao estado 76
    '.'  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 36 (expression)


Estado 65

   18 expression: expression . '.' OBJECTID '(' expression_params ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' expression_params ')'
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   32           | '~' expression .
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression

    '@'  deslocar, e ir ao estado 76
    '.'  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 32 (expression)


Estado 66

   18 expression: expression . '.' OBJECTID '(' expression_params ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' expression_params ')'
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression
   48 expression_list: expression . ';'

    LE   deslocar, e ir ao estado 69
    '<'  deslocar, e ir ao estado 70
    '='  deslocar, e ir ao estado 71
    '+'  deslocar, e ir ao estado 72
    '-'  deslocar, e ir ao estado 73
    '*'  deslocar, e ir ao estado 74
    '/'  deslocar, e ir ao estado 75
    '@'  deslocar, e ir ao estado 76
    '.'  deslocar, e ir ao estado 77
    ';'  deslocar, e ir ao estado 87


Estado 67

   23 expression: '{' expression_list . '}'
   49 expression_list: expression_list . expression ';'
   50                | expression_list . error ';'

    error       deslocar, e ir ao estado 88
    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '}'         deslocar, e ir ao estado 89
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 90


Estado 68

   18 expression: expression . '.' OBJECTID '(' expression_params ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' expression_params ')'
   28           | expression . '+' expression
   29           | expression . '-' expression
   30           | expression . '*' expression
   31           | expression . '/' expression
   33           | expression . '<' expression
   34           | expression . LE expression
   35           | expression . '=' expression
   37           | '(' expression . ')'

    LE   deslocar, e ir ao estado 69
    '<'  deslocar, e ir ao estado 70
    '='  deslocar, e ir ao estado 71
    '+'  deslocar, e ir ao estado 72
    '-'  deslocar, e ir ao estado 73
    '*'  deslocar, e ir ao estado 74
    '/'  deslocar, e ir ao estado 75
    '@'  deslocar, e ir ao estado 76
    '.'  deslocar, e ir ao estado 77
    ')'  deslocar, e ir ao estado 91


Estado 69

   34 expression: expression LE . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 92


Estado 70

   33 expression: expression '<' . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 93


Estado 71

   35 expression: expression '=' . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 94


Estado 72

   28 expression: expression '+' . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 95


Estado 73

   29 expression: expression '-' . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expression  ir ao estado 96


Estado 74

   30 expression: expression '*' . expression

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51
